Latest styling updates for charter

--- a/functions/test-db/json2/digitalparticipation/templates/home.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/home.hbs
@@ -1,89 +1,91 @@
-<div class="row title">
-    <div class="col s12 m7 l5">
-        <img src="/app/assets/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img hide-on-med-and-up" />
-        <h1>Sign Up &amp; Skill Up for a Digitally Smarter Scotland</h1>
+<div class="mdc-layout-grid">
+    <div class="mdc-layout-grid-inner title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m7 l5">
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img hide-on-med-and-up" />
+            <h1>Sign Up &amp; Skill Up for a Digitally Smarter Scotland</h1>
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m5 l7">
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img" />
+        </div>
     </div>
-    <div class="col hide-on-small-only m5 l7">
-        <img src="/app/assets/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img" />
+    <div class="mdc-layout-grid-inner description">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr />
+            <h2>
+                We are on a mission: to give everyone in Scotland the basic digital
+                skills they need to do their jobs, live their lives, and confidently use
+                different digital services. To do this, we need your help&hellip;
+            </h2>
+            <hr />
+        </div>
     </div>
-</div>
-<div class="row description">
-    <div class="col s12">
-        <hr />
-        <h2>
-            We are on a mission: to give everyone in Scotland the basic digital
-            skills they need to do their jobs, live their lives, and confidently use
-            different digital services. To do this, we need your help&hellip;
-        </h2>
-        <hr />
-    </div>
-</div>
-<div class="row description">
-    <div class="col s12 m6">
-        <h1>It’s Simple <br />To Sign Up</h1>
-        <p>
-            By signing Scotland's Digital Participation Charter your organisation
-            can commit to digitally skilling up your workforce, members and
-            stakeholders. The charter provides a useful framework for support
-            and training to skill up Scotland.
-        </p>
-        <p>
-            <a href="/sign-up" class="hide-on-med-and-up">
-                <img src="/app/assets/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
+    <div class="mdc-layout-grid-inner description">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+            <h1>It’s Simple <br />To Sign Up</h1>
+            <p>
+                By signing Scotland's Digital Participation Charter your organisation
+                can commit to digitally skilling up your workforce, members and
+                stakeholders. The charter provides a useful framework for support
+                and training to skill up Scotland.
+            </p>
+            <p>
+                <a href="/sign-up" class="hide-on-med-and-up">
+                    <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
+                </a>
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m6">
+            <a href="/sign-up">
+                <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
             </a>
-        </p>
+        </div>
     </div>
-    <div class="col hide-on-small-only m6">
-        <a href="/sign-up">
-            <img src="/app/assets/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
-        </a>
-    </div>
-</div>
-<div class="row expand">
-    <div class="col s12 m6">
-        <hr class="nomargin" />
-        <h4>
-            <a href="/the-charter">
-                <div class="text">
-                    Discover our five charter pledges
-                </div>
-                <i class="material-icons">arrow_forward</i>
-            </a>
-        </h4>
-        <hr class="nomargin" />
-    </div>
-    <div class="col s12 m6">
-        <hr class="nomargin hide-on-small-only" />
-        <h4>
-            <a href="/sign-up/form">
-                <div class="text">
-                    Sign up on-line using our simple form
-                </div>
-                <i class="material-icons">arrow_forward</i>
-            </a>
-        </h4>
-        <hr class="nomargin" />
-    </div>
-    <div class="col s12 m6">
-        <h4>
-            <a href="/skill-up">
-                <div class="text">
-                    Uncover what basic digital skills might mean for your organisation
-                </div>
-                <i class="material-icons">arrow_forward</i>
-            </a>
-        </h4>
-        <hr class="nomargin" />
-    </div>
-    <div class="col s12 m6">
-        <h4>
-            <a href="/resources">
-                <div class="text">
-                    Show your support, and help spread the word
-                </div>
-                <i class="material-icons">arrow_forward</i>
-            </a>
-        </h4>
-        <hr class="nomargin" />
+    <div class="mdc-layout-grid-inner expand">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+            <hr class="nomargin" />
+            <h4>
+                <a href="/the-charter">
+                    <div class="text">
+                        Discover our five charter pledges
+                    </div>
+                    <i class="material-icons">armdc-layout-grid-inner_forward</i>
+                </a>
+            </h4>
+            <hr class="nomargin" />
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+            <hr class="nomargin hide-on-small-only" />
+            <h4>
+                <a href="/sign-up/form">
+                    <div class="text">
+                        Sign up on-line using our simple form
+                    </div>
+                    <i class="material-icons">armdc-layout-grid-inner_forward</i>
+                </a>
+            </h4>
+            <hr class="nomargin" />
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+            <h4>
+                <a href="/skill-up">
+                    <div class="text">
+                        Uncover what basic digital skills might mean for your organisation
+                    </div>
+                    <i class="material-icons">armdc-layout-grid-inner_forward</i>
+                </a>
+            </h4>
+            <hr class="nomargin" />
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+            <h4>
+                <a href="/resources">
+                    <div class="text">
+                        Show your support, and help spread the word
+                    </div>
+                    <i class="material-icons">armdc-layout-grid-inner_forward</i>
+                </a>
+            </h4>
+            <hr class="nomargin" />
+        </div>
     </div>
 </div>
