--- a/functions/test-db/json2/digitalparticipation/templates/digitalparticipation.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/digitalparticipation.hbs
@@ -5,24 +5,24 @@
     <title>Scotland's Digital Participation Charter</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/icons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://storage.cloud.google.com/digitalparticipation/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="https://storage.cloud.google.com/digitalparticipation/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://storage.cloud.google.com/digitalparticipation/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://storage.cloud.google.com/digitalparticipation/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://storage.cloud.google.com/digitalparticipation/icons/favicon-16x16.png">
+    <link rel="manifest" href="https://storage.cloud.google.com/digitalparticipation/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#00838f">
-    <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="https://storage.cloud.google.com/digitalparticipation/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
-    <link rel="search" type="application/opensearchdescription+xml" title="Good HQ" href="/assets/opensearch.xml" />
+    <link rel="search" type="application/opensearchdescription+xml" title="Good HQ" href="https://storage.cloud.google.com/digitalparticipation/opensearch.xml" />
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <style type="text/css">
     {{{this.css}}}
@@ -115,10 +115,10 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
                                     <a href="http://gov.scot/Topics/Economy/digital">
-                                        <img src="assets/images/digital-scotland.png" alt="Digital Scotland" class="logo digital-scotland" />
+                                        <img src="https://storage.cloud.google.com/digitalparticipation/images/digital-scotland.png" alt="Digital Scotland" class="logo digital-scotland" />
                                     </a>
                                     <a href="http://scvo.org">
-                                        <img src="assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                                        <img src="https://storage.cloud.google.com/digitalparticipation/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
                                     </a>
                                 </div>
                             </div>
