--- a/functions/test-db/json2/digitalparticipation/templates/resources.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/resources.hbs
@@ -1,50 +1,52 @@
-<div class="row title">
-    <div class="col s12 m6">
-        <h1>Resources</h1>
-        <img src="/app/assets/images/illustrations/Resource-Banner.png" alt="Resources illustration" class="responsive-img hide-on-med-and-up" />
+<div class="mdc-layout-grid">
+    <div class="mdc-layout-grid-inner title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+            <h1>Resources</h1>
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Resource-Banner.png" alt="Resources illustration" class="responsive-img hide-on-med-and-up" />
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m6">
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Resource-Banner.png" alt="Resources illustration" class="responsive-img pull-right" />
+        </div>
     </div>
-    <div class="col hide-on-small-only m6">
-        <img src="/app/assets/images/illustrations/Resource-Banner.png" alt="Resources illustration" class="responsive-img pull-right" />
-    </div>
-</div>
-<div class="row resources">
-    <div class="col s12">
-        <hr class="margin-bottom" />
+    <div class="mdc-layout-grid-inner resources">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="margin-bottom" />
 
-        <h3>Need help to get online and develop your own basic digital skills?</h3>
-        <h4>
-            <a href="/resources/support">
-                Find support near you and online
-                <i class="material-icons">arrow_forward</i>
-            </a>
-        </h4>
-        <hr />
+            <h3>Need help to get online and develop your own basic digital skills?</h3>
+            <h4>
+                <a href="/resources/support">
+                    Find support near you and online
+                    <i class="material-icons">arrow_forward</i>
+                </a>
+            </h4>
+            <hr />
 
-        <h3>Want to help others develop their basic digital skills?</h3>
-        <h4>
-            <a href="/resources/help-others">
-                Get support to be a digital champion
-                <i class="material-icons">arrow_forward</i>
-            </a>
-        </h4>
-        <hr />
+            <h3>Want to help others develop their basic digital skills?</h3>
+            <h4>
+                <a href="/resources/help-others">
+                    Get support to be a digital champion
+                    <i class="material-icons">arrow_forward</i>
+                </a>
+            </h4>
+            <hr />
 
-        <h3>Want to understand the latest research and evidence on digital participation?</h3>
-        <h4>
-            <a href="/resources/reports">
-                View links to recent reports and publications
-                <i class="material-icons">arrow_forward</i>
-            </a>
-        </h4>
-        <hr />
+            <h3>Want to understand the latest research and evidence on digital participation?</h3>
+            <h4>
+                <a href="/resources/reports">
+                    View links to recent reports and publications
+                    <i class="material-icons">arrow_forward</i>
+                </a>
+            </h4>
+            <hr />
 
-        <h3>Want to promote Scotland's Digital Participation Charter?</h3>
-        <h4>
-            <a href="/resources/logos">
-                Download our brand guidelines and logos
-                <i class="material-icons">arrow_forward</i>
-            </a>
-        </h4>
-        <hr />
+            <h3>Want to promote Scotland's Digital Participation Charter?</h3>
+            <h4>
+                <a href="/resources/logos">
+                    Download our brand guidelines and logos
+                    <i class="material-icons">arrow_forward</i>
+                </a>
+            </h4>
+            <hr />
+        </div>
     </div>
 </div>
