--- a/functions/test-db/json2/digitalparticipation/templates/sign-up-complete.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/sign-up-complete.hbs
@@ -1,11 +1,13 @@
-<div class="row title">
-    <div class="col s12">
-        <h1>Thank You!</h1>
-        <h2>We will be in touch shortly with further information.</h2>
+<div class="mdc-layout-grid">
+    <div class="mdc-layout-grid-inner title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <h1>Thank You!</h1>
+            <h2>We will be in touch shortly with further information.</h2>
+        </div>
     </div>
-</div>
-<div class="row description">
-    <div class="col s12">
-        <hr />
+    <div class="mdc-layout-grid-inner description">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr />
+        </div>
     </div>
 </div>
