--- a/functions/test-db/json2/digitalparticipation/templates/sign-up.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/sign-up.hbs
@@ -1,50 +1,52 @@
-<div class="row title">
-    <div class="col s12 m5">
-        <h1>Sign The Charter &amp; Skill Up for Scotland</h1>
-        <p>
-            Joining up is simple. Just sign up using the form below and take a step towards a digitally smarter Scotland. We'll ask you for some details about your organisation (so you'll need to make sure you're authorised to sign on their behalf), then we'll ask what your commitment is going to be. This is something you'll define for yourself: anything your organisation can do to help build basic digital skills, big or small, is important. We won't pass your contact details on to any third parties. Thank you - we really value your support.
-        </p>
-        <img src="/app/assets/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img hide-on-med-and-up" />
+<div class="mdc-layout-grid">
+    <div class="mdc-layout-grid-inner title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m5">
+            <h1>Sign The Charter &amp; Skill Up for Scotland</h1>
+            <p>
+                Joining up is simple. Just sign up using the form below and take a step towards a digitally smarter Scotland. We'll ask you for some details about your organisation (so you'll need to make sure you're authorised to sign on their behalf), then we'll ask what your commitment is going to be. This is something you'll define for yourself: anything your organisation can do to help build basic digital skills, big or small, is important. We won't pass your contact details on to any third parties. Thank you - we really value your support.
+            </p>
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img hide-on-med-and-up" />
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only offset-m1 m5">
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr />
+        </div>
     </div>
-    <div class="col hide-on-small-only offset-m1 m5">
-        <img src="/app/assets/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
+    <div class="mdc-layout-grid-inner title">
+        <div class="mdc-layout-grid__cell hide-on-small-only m4 offset-m1">
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img" />
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+            <h1>Eligibility</h1>
+            <p>
+                Who can sign the Charter?
+            </p>
+            <p>
+                Any organisation from the public, private or third sectors can sign the Charter. Big or small, Scotland-based or international – as long as your organisation operates in Scotland, you can sign.
+            </p>
+            <p>
+                All we ask is that you make a commitment to digital participation. That could mean a plan to skill up your own workforce, an offer you’re making to the wider community, a commitment to building basic digital skills for your tenants, clients or service users, or whatever fits best for your organisation. We’re happy to work with you to find out what might work best. You can see <a href="/stories">case study examples</a> of what some other organisations have done, or you can <a href="/contact-us">contact us</a> for more information.
+            </p>
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img hide-on-med-and-up" />
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr />
+        </div>
     </div>
-    <div class="col hide-on-small-only m1">
-        &nbsp;
-    </div>
-    <div class="col s12">
-        <hr />
-    </div>
-</div>
-<div class="row title">
-    <div class="col hide-on-small-only m4 offset-m1">
-        <img src="/app/assets/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img" />
-    </div>
-    <div class="col hide-on-small-only m1">
-        &nbsp;
-    </div>
-    <div class="col s12 m6">
-        <h1>Eligibility</h1>
-        <p>
-            Who can sign the Charter?
-        </p>
-        <p>
-            Any organisation from the public, private or third sectors can sign the Charter. Big or small, Scotland-based or international – as long as your organisation operates in Scotland, you can sign.
-        </p>
-        <p>
-            All we ask is that you make a commitment to digital participation. That could mean a plan to skill up your own workforce, an offer you’re making to the wider community, a commitment to building basic digital skills for your tenants, clients or service users, or whatever fits best for your organisation. We’re happy to work with you to find out what might work best. You can see <a href="/stories">case study examples</a> of what some other organisations have done, or you can <a href="/contact-us">contact us</a> for more information.
-        </p>
-        <img src="/app/assets/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img hide-on-med-and-up" />
-    </div>
-    <div class="col s12">
-        <hr />
-    </div>
-</div>
-<div class="row description">
-    <div class="col s12 m8 offset-m2 l6 offset-l3">
-        <a href="/sign-up/form" class="btn btn-primary">Okay, let's get started</a>
-    </div>
-    <div class="col s12">
-        <hr />
+    <div class="mdc-layout-grid-inner description">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m8 offset-m2 l6 offset-l3">
+            <a href="/sign-up/form" class="btn btn-primary">Okay, let's get started</a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr />
+        </div>
     </div>
 </div>
