--- a/functions/test-db/json2/digitalparticipation/templates/stories.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/stories.hbs
@@ -1,95 +1,97 @@
-<div class="row title">
-    <div class="col s12 m6">
-        <h1>Stories</h1>
+<div class="mdc-layout-grid">
+    <div class="mdc-layout-grid-inner title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+            <h1>Stories</h1>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="margin-top" />
+        </div>
     </div>
-    <div class="col s12">
-        <hr class="margin-top" />
+    <div class="mdc-layout-grid-inner expand skills">
+        <div class="mdc-layout-grid__cell s11 m4">
+            <h3>
+                Cre8te Opportunities Limited
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell s1 hide-on-med-and-up">
+            <h3>
+                <a href="/stories/cre8te-opportunites">
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </a>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m7">
+            <p>
+                “Giving people the skills they are expected to have automatically by the welfare system enables them to meet Jobcentre expectations &amp; help avoid the possibility of sanctions, which are having a major impact on people living in poverty” <a href="/stories/cre8te-opportunites">Read more&hellip;</a>
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+            <h3>
+                <a href="/stories/cre8te-opportunites">
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </a>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="nomargin" />
+        </div>
     </div>
-</div>
-<div class="row expand skills">
-    <div class="col s11 m4">
-        <h3>
-            Cre8te Opportunities Limited
-        </h3>
+    <div class="mdc-layout-grid-inner expand skills">
+        <div class="mdc-layout-grid__cell s11 m4">
+            <h3>
+                Glasgow Life
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell s1 hide-on-med-and-up">
+            <h3>
+                <a href="/stories/glasgow-life">
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </a>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m7">
+            <p>
+                “Our frontline staff have the skills and knowledge to weave relevant digital learning elements into the work they are already doing with harder to reach groups” <a href="/stories/glasgow-life">Read more&hellip;</a>
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+            <h3>
+                <a href="/stories/glasgow-life">
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </a>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="nomargin" />
+        </div>
     </div>
-    <div class="col s1 hide-on-med-and-up">
-        <h3>
-            <a href="/stories/cre8te-opportunites">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </a>
-        </h3>
-    </div>
-    <div class="col s12 m7">
-        <p>
-            “Giving people the skills they are expected to have automatically by the welfare system enables them to meet Jobcentre expectations &amp; help avoid the possibility of sanctions, which are having a major impact on people living in poverty” <a href="/stories/cre8te-opportunites">Read more&hellip;</a>
-        </p>
-    </div>
-    <div class="col hide-on-small-only m1">
-        <h3>
-            <a href="/stories/cre8te-opportunites">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </a>
-        </h3>
-    </div>
-    <div class="col s12">
-        <hr class="nomargin" />
-    </div>
-</div>
-<div class="row expand skills">
-    <div class="col s11 m4">
-        <h3>
-            Glasgow Life
-        </h3>
-    </div>
-    <div class="col s1 hide-on-med-and-up">
-        <h3>
-            <a href="/stories/glasgow-life">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </a>
-        </h3>
-    </div>
-    <div class="col s12 m7">
-        <p>
-            “Our frontline staff have the skills and knowledge to weave relevant digital learning elements into the work they are already doing with harder to reach groups” <a href="/stories/glasgow-life">Read more&hellip;</a>
-        </p>
-    </div>
-    <div class="col hide-on-small-only m1">
-        <h3>
-            <a href="/stories/glasgow-life">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </a>
-        </h3>
-    </div>
-    <div class="col s12">
-        <hr class="nomargin" />
-    </div>
-</div>
-<div class="row expand skills">
-    <div class="col s11 m4">
-        <h3>
-            Queens Cross Housing Association
-        </h3>
-    </div>
-    <div class="col s1 hide-on-med-and-up">
-        <h3>
-            <a href="/stories/queens-cross">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </a>
-        </h3>
-    </div>
-    <div class="col s12 m7">
-        <p>
-            “We worked to engage older people with the internet” <a href="/stories/queens-cross">Read more&hellip;</a>
-        </p>
-    </div>
-    <div class="col hide-on-small-only m1">
-        <h3>
-            <a href="/stories/queens-cross">
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </a>
-        </h3>
-    </div>
-    <div class="col s12">
-        <hr class="nomargin" />
+    <div class="mdc-layout-grid-inner expand skills">
+        <div class="mdc-layout-grid__cell s11 m4">
+            <h3>
+                Queens Cross Housing Association
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell s1 hide-on-med-and-up">
+            <h3>
+                <a href="/stories/queens-cross">
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </a>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m7">
+            <p>
+                “We worked to engage older people with the internet” <a href="/stories/queens-cross">Read more&hellip;</a>
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+            <h3>
+                <a href="/stories/queens-cross">
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </a>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="nomargin" />
+        </div>
     </div>
 </div>
