--- a/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
@@ -1,138 +1,140 @@
-<div class="row title">
-    <div class="col s12 m6">
-        <h1>Skill Up Scotland</h1>
-        <p>
-            When you sign Scotland's Digital Participation Charter, we ask you
-            to commit to five key pledges - allowing Scotland to work together
-            and skill up our digital nation.
-        </p>
-        <img src="/app/assets/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img hide-on-med-and-up" />
+<div class="mdc-layout-grid">
+    <div class="mdc-layout-grid-inner title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
+            <h1>Skill Up Scotland</h1>
+            <p>
+                When you sign Scotland's Digital Participation Charter, we ask you
+                to commit to five key pledges - allowing Scotland to work together
+                and skill up our digital nation.
+            </p>
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img hide-on-med-and-up" />
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-5-desktop">
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img" />
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="pledges" />
+        </div>
     </div>
-    <div class="col hide-on-small-only m5">
-        <img src="/app/assets/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img" />
+    <div class="mdc-layout-grid-inner description pledges">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
+            <h1 class="align-bottom">Our Pledges</h1>
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-5-desktop">
+            <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Pledges-RGB-04.png" alt="Our Pledges illustration" class="responsive-img" />
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop2">
+            <hr class="nomargin" />
+        </div>
     </div>
-    <div class="col hide-on-small-only m1">
-        &nbsp;
+    <div class="mdc-layout-grid-inner expand pledge">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+            <h3>
+                <span class="number">1</span>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+            <h3>
+                Skill Up
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+            <p>
+                We ensure that our staff &amp; volunteers have the opportunity
+                to develop basic digital skills.
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="nomargin" />
+        </div>
     </div>
-    <div class="col s12">
-        <hr class="pledges" />
+    <div class="mdc-layout-grid-inner expand pledge">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+            <h3>
+                <span class="number">2</span>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+            <h3>
+                Support Staff
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+            <p>
+                We support our staff &amp; volunteers to help others learn basic
+                digital skills and embrace digital tools.
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="nomargin" />
+        </div>
     </div>
-</div>
-<div class="row description pledges">
-    <div class="col s12 m6">
-        <h1 class="align-bottom">Our Pledges</h1>
+    <div class="mdc-layout-grid-inner expand pledge">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+            <h3>
+                <span class="number">3</span>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+            <h3>
+                Support Scotland
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+            <p>
+                We support our nation by contributing resources and practical
+                support for Scotland in whatever ways we can.
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="nomargin" />
+        </div>
     </div>
-    <div class="col hide-on-small-only m5">
-        <img src="/app/assets/images/illustrations/Pledges-RGB-04.png" alt="Our Pledges illustration" class="responsive-img" />
+    <div class="mdc-layout-grid-inner expand pledge">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+            <h3>
+                <span class="number">4</span>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+            <h3>
+                Back to Basics
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+            <p>
+                We support a common language based on digital participation and
+                basic digital skills to make our thinking and actions as clear
+                as possible.
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="nomargin" />
+        </div>
     </div>
-    <div class="col hide-on-small-only m12">
-        <hr class="nomargin" />
-    </div>
-</div>
-<div class="row expand pledge">
-    <div class="col s2 m1">
-        <h3>
-            <span class="number">1</span>
-        </h3>
-    </div>
-    <div class="col s10 m4">
-        <h3>
-            Skill Up
-        </h3>
-    </div>
-    <div class="col s12 m7">
-        <p>
-            We ensure that our staff &amp; volunteers have the opportunity
-            to develop basic digital skills.
-        </p>
-    </div>
-    <div class="col s12">
-        <hr class="nomargin" />
-    </div>
-</div>
-<div class="row expand pledge">
-    <div class="col s2 m1">
-        <h3>
-            <span class="number">2</span>
-        </h3>
-    </div>
-    <div class="col s10 m4">
-        <h3>
-            Support Staff
-        </h3>
-    </div>
-    <div class="col s12 m7">
-        <p>
-            We support our staff &amp; volunteers to help others learn basic
-            digital skills and embrace digital tools.
-        </p>
-    </div>
-    <div class="col s12">
-        <hr class="nomargin" />
-    </div>
-</div>
-<div class="row expand pledge">
-    <div class="col s2 m1">
-        <h3>
-            <span class="number">3</span>
-        </h3>
-    </div>
-    <div class="col s10 m4">
-        <h3>
-            Support Scotland
-        </h3>
-    </div>
-    <div class="col s12 m7">
-        <p>
-            We support our nation by contributing resources and practical
-            support for Scotland in whatever ways we can.
-        </p>
-    </div>
-    <div class="col s12">
-        <hr class="nomargin" />
-    </div>
-</div>
-<div class="row expand pledge">
-    <div class="col s2 m1">
-        <h3>
-            <span class="number">4</span>
-        </h3>
-    </div>
-    <div class="col s10 m4">
-        <h3>
-            Back to Basics
-        </h3>
-    </div>
-    <div class="col s12 m7">
-        <p>
-            We support a common language based on digital participation and
-            basic digital skills to make our thinking and actions as clear
-            as possible.
-        </p>
-    </div>
-    <div class="col s12">
-        <hr class="nomargin" />
-    </div>
-</div>
-<div class="row expand pledge">
-    <div class="col s2 m1">
-        <h3>
-            <span class="number">5</span>
-        </h3>
-    </div>
-    <div class="col s10 m4">
-        <h3>
-            Come Together
-        </h3>
-    </div>
-    <div class="col s12 m7">
-        <p>
-            We channel our efforts through the Digital Participation
-            programme so that our activities are coordinated and build on
-            each other.
-        </p>
-    </div>
-    <div class="col s12">
-        <hr class="margin-bottom" />
+    <div class="mdc-layout-grid-inner expand pledge">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+            <h3>
+                <span class="number">5</span>
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+            <h3>
+                Come Together
+            </h3>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+            <p>
+                We channel our efforts through the Digital Participation
+                programme so that our activities are coordinated and build on
+                each other.
+            </p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <hr class="margin-bottom" />
+        </div>
     </div>
 </div>
