--- a/functions/test-db/json2/digitalparticipation/templates/resources-detail.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/resources-detail.hbs
@@ -1,12 +1,12 @@
 <div class="mdc-layout-grid">
     {{#compare params.slug "===" "help-others"}}
-    <div class="mdc-layout-grid-inner detail title">
+    <div class="mdc-layout-grid__inner detail title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1><a href="/resources">Resources</a></h1>
             <h2>Help others get online</h2>
         </div>
     </div>
-    <div class="mdc-layout-grid-inner detail">
+    <div class="mdc-layout-grid__inner detail">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr class="margin-bottom" />
 
@@ -29,13 +29,13 @@
 
     {{else}}
     {{#compare params.slug "===" "logos"}}
-    <div class="mdc-layout-grid-inner detail title">
+    <div class="mdc-layout-grid__inner detail title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1><a href="/resources">Resources</a></h1>
             <h2>Digital Participation Charter Logos</h2>
         </div>
     </div>
-    <div class="mdc-layout-grid-inner detail">
+    <div class="mdc-layout-grid__inner detail">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr class="margin-bottom" />
 
@@ -60,13 +60,13 @@
 
     {{else}}
     {{#compare params.slug "===" "reports"}}
-    <div class="mdc-layout-grid-inner detail title">
+    <div class="mdc-layout-grid__inner detail title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1><a href="/resources">Resources</a></h1>
             <h2>Reports and publications</h2>
         </div>
     </div>
-    <div class="mdc-layout-grid-inner detail">
+    <div class="mdc-layout-grid__inner detail">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr class="margin-bottom" />
 
@@ -201,13 +201,13 @@
 
     {{else}}
     {{#compare params.slug "===" "support"}}
-    <div class="mdc-layout-grid-inner detail title">
+    <div class="mdc-layout-grid__inner detail title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1><a href="/resources">Resources</a></h1>
             <h2>Support near you and online</h2>
         </div>
     </div>
-    <div class="mdc-layout-grid-inner detail">
+    <div class="mdc-layout-grid__inner detail">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr class="margin-bottom" />
 
