--- a/functions/test-db/json2/digitalparticipation/templates/skill-up.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/skill-up.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner title">
+    <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m5">
             <h1>Back The Basics</h1>
             <p>
@@ -21,7 +21,7 @@
             <hr />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
             <h1 id="digital_skills">Digital Skills</h1>
         </div>
@@ -31,7 +31,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell s2 m1">
             <h3>
                 <span class="number">1</span>
@@ -66,7 +66,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell s2 m1">
             <h3>
                 <span class="number">2</span>
@@ -101,7 +101,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell s2 m1">
             <h3>
                 <span class="number">3</span>
@@ -136,7 +136,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell s2 m1">
             <h3>
                 <span class="number">4</span>
@@ -171,7 +171,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell s2 m1">
             <h3>
                 <span class="number">5</span>
@@ -207,7 +207,7 @@
         </div>
     </div>
 
-    <div class="mdc-layout-grid-inner title">
+    <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell hide-on-small-only m5">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Why-It-Matters-RGB-04.png" alt="Why It Matters? illustration" class="responsive-img" />
         </div>
