--- a/functions/test-db/json2/digitalparticipation/templates/stories-detail.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/stories-detail.hbs
@@ -1,15 +1,15 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner detail title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+    <div class="mdc-layout-grid__inner detail title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h1><a href="/stories">Stories</a></h1>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner detail">
+    <div class="mdc-layout-grid__inner detail">
         {{#compare params.slug "===" "cre8te-opportunites"}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h3>“Giving people the skills they are expected to have automatically by the welfare system enables them to meet Jobcentre expectations &amp; help avoid the possibility of sanctions, which are having a major impact on people living in poverty”</h3>
             <p>&#8212; <strong><a href="/signatories/cre8te-opportunities-limited">Cre8te Opportunities Limited</a></strong></p>
         </div>
@@ -29,7 +29,7 @@
         </div>
         {{else}}
         {{#compare params.slug "===" "glasgow-life"}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h3>“Our frontline staff have the skills and knowledge to weave relevant digital learning elements into the work they are already doing with harder to reach groups”</h3>
             <p>&#8212; <strong><a href="/signatories/glasgow-life">Glasgow Life</a></strong></p>
         </div>
