--- a/functions/test-db/json2/digitalparticipation/templates/stories.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/stories.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner title">
+    <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
             <h1>Stories</h1>
         </div>
@@ -7,7 +7,7 @@
             <hr class="margin-top" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell s11 m4">
             <h3>
                 Cre8te Opportunities Limited
@@ -36,7 +36,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell s11 m4">
             <h3>
                 Glasgow Life
@@ -65,7 +65,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand skills">
+    <div class="mdc-layout-grid__inner expand skills">
         <div class="mdc-layout-grid__cell s11 m4">
             <h3>
                 Queens Cross Housing Association
