--- a/functions/test-db/json2/digitalparticipation/templates/terms.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/terms.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner title">
+    <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>Terms &amp; Conditions</h2>
             <h3 class="page-title">Terms and Conditions</h3>
