--- a/functions/test-db/json2/digitalparticipation/templates/accessibility.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/accessibility.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner title">
+    <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>Accessibility</h2>
             <p>This website has been designed to comply with international web accessibility standards issued by the <a href="http://www.w3cuk.org.uk/">World Wide Web consortium</a> (W3C) as part of their <a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.</p>
