--- a/functions/test-db/json2/digitalparticipation/templates/home.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/home.hbs
@@ -1,14 +1,14 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m7 l5">
+    <div class="mdc-layout-grid__inner title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-12-phone">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img hide-on-med-and-up" />
             <h1>Sign Up &amp; Skill Up for a Digitally Smarter Scotland</h1>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m5 l7">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-12-phone">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Main-Hero-RGB-04.png" alt="Sign up &amp; skill up illustration" class="responsive-img" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner description">
+    <div class="mdc-layout-grid__inner description">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr />
             <h2>
@@ -19,8 +19,8 @@
             <hr />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner description">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+    <div class="mdc-layout-grid__inner description">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <h1>It’s Simple <br />To Sign Up</h1>
             <p>
                 By signing Scotland's Digital Participation Charter your organisation
@@ -34,55 +34,55 @@
                 </a>
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m6">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <a href="/sign-up">
                 <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Simple-Sign-Up-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
             </a>
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+    <div class="mdc-layout-grid__inner expand">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <hr class="nomargin" />
             <h4>
                 <a href="/the-charter">
                     <div class="text">
                         Discover our five charter pledges
                     </div>
-                    <i class="material-icons">armdc-layout-grid-inner_forward</i>
+                    <i class="material-icons">armdc-layout-grid__inner_forward</i>
                 </a>
             </h4>
             <hr class="nomargin" />
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <hr class="nomargin hide-on-small-only" />
             <h4>
                 <a href="/sign-up/form">
                     <div class="text">
                         Sign up on-line using our simple form
                     </div>
-                    <i class="material-icons">armdc-layout-grid-inner_forward</i>
+                    <i class="material-icons">armdc-layout-grid__inner_forward</i>
                 </a>
             </h4>
             <hr class="nomargin" />
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <h4>
                 <a href="/skill-up">
                     <div class="text">
                         Uncover what basic digital skills might mean for your organisation
                     </div>
-                    <i class="material-icons">armdc-layout-grid-inner_forward</i>
+                    <i class="material-icons">armdc-layout-grid__inner_forward</i>
                 </a>
             </h4>
             <hr class="nomargin" />
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <h4>
                 <a href="/resources">
                     <div class="text">
                         Show your support, and help spread the word
                     </div>
-                    <i class="material-icons">armdc-layout-grid-inner_forward</i>
+                    <i class="material-icons">armdc-layout-grid__inner_forward</i>
                 </a>
             </h4>
             <hr class="nomargin" />
