--- a/functions/test-db/json2/digitalparticipation/templates/privacy.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/privacy.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner title">
+    <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>Privacy &amp; Cookie policy</h2>
 
