--- a/functions/test-db/json2/digitalparticipation/templates/skill-up-detail.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/skill-up-detail.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner expand paging hide-on-med-and-up">
+    <div class="mdc-layout-grid__inner expand paging hide-on-med-and-up">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="nomargin">
                 <a href="/skill-up/managing-information">
@@ -20,7 +20,7 @@
             </h3>
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand detail">
+    <div class="mdc-layout-grid__inner expand detail">
         <div class="mdc-layout-grid__cell hide-on-small-only m4">
             {{#compare params.slug "===" "managing-information"}}
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Managing-Info).png" alt="Managing Info illustration" class="responsive-img margin-top" />
@@ -144,7 +144,7 @@
             {{/compare}}
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand paging hide-on-small-only">
+    <div class="mdc-layout-grid__inner expand paging hide-on-small-only">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="margin-top">
                 <a href="/skill-up/managing-information">
