--- a/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
@@ -1,6 +1,6 @@
 <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid-inner title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
+    <div class="mdc-layout-grid__inner title">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <h1>Skill Up Scotland</h1>
             <p>
                 When you sign Scotland's Digital Participation Charter, we ask you
@@ -19,7 +19,7 @@
             <hr class="pledges" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner description pledges">
+    <div class="mdc-layout-grid__inner description pledges">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
             <h1 class="align-bottom">Our Pledges</h1>
         </div>
@@ -30,7 +30,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand pledge">
+    <div class="mdc-layout-grid__inner expand pledge">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
             <h3>
                 <span class="number">1</span>
@@ -51,7 +51,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand pledge">
+    <div class="mdc-layout-grid__inner expand pledge">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
             <h3>
                 <span class="number">2</span>
@@ -72,7 +72,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand pledge">
+    <div class="mdc-layout-grid__inner expand pledge">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
             <h3>
                 <span class="number">3</span>
@@ -93,7 +93,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand pledge">
+    <div class="mdc-layout-grid__inner expand pledge">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
             <h3>
                 <span class="number">4</span>
@@ -115,7 +115,7 @@
             <hr class="nomargin" />
         </div>
     </div>
-    <div class="mdc-layout-grid-inner expand pledge">
+    <div class="mdc-layout-grid__inner expand pledge">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
             <h3>
                 <span class="number">5</span>
